--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -23,6 +23,9 @@
 {{- /* Include the Lensing Effect Script */ -}}
 <script src="{{ "js/lensing-effect.js" | relURL }}" defer></script>
 
+{{- /* Include Responsive Tables Script */ -}}
+<script src="{{ "js/responsive-tables.js" | relURL }}" defer></script>
+
 {{- /* Initialize the Lensing Effect */ -}}
 <script>
 document.addEventListener('DOMContentLoaded', () => {
